--- a/helle.html
+++ b/helle.html
@@ -1,30 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Vue 测试实例 </title>
-    <script src="https://cdn.staticfile.org/vue/3.0.5/vue.global.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>React</title>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
 </head>
 <body>
-    <div id="app">{{name}}
-    </div>
-
-    <script>
-        const app = {
-            data() {
-                return {
-                    name: 'hello,world!!'
-                }
-            },
-            methods: {
-                greet(event) {
-                   
-                }
-            }
-        }
-
-        Vue.createApp(app).mount('#app')
+    <div id="root"></div>
+    <script type="text/babel">
+        const element = <h1>hello world</h1>
+        const root = ReactDOM.createRoot(document.getElementById("root"))
+        root.render(element)
     </script>
 </body>
-
 </html>
