Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   helle.html

--- a/helle.html
+++ b/helle.html
@@ -15,6 +15,8 @@
         const element = <h1>hello world</h1>
         const root = ReactDOM.createRoot(document.getElementById("root"))
         root.render(element)
+
+        root.render(element)
     </script>
 </body>
 </html>
