--- a/helle.html
+++ b/helle.html
@@ -12,13 +12,15 @@
 <body>
     <div id="root"></div>
     <script type="text/babel">
-        const element = <h1>hello world</h1>
+        const element = (
+            <div>
+                <h1>hello world</h1>
+                <div>thi si si sss</div>
+            </div>
+        )
         const root = ReactDOM.createRoot(document.getElementById("root"))
         root.render(element)
 
-        root.render(element)
-
-        root.render(element)
     </script>
 </body>
 </html>
